--- a/Color-hub-scroll/css/main.css
+++ b/Color-hub-scroll/css/main.css
@@ -20,12 +20,16 @@
     src: url(/Color-hub-scroll/fonts/outfit-regular.woff2);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: outfit-c;
+}
+
 body {
     background-image: url(/Color-hub-scroll/img/bg.jpg);
     background-size: 50%;
     color: #fafafa;
     font-family: raleway-c;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .hero {
@@ -33,4 +37,20 @@ body {
     position: absolute;
     left: 37vw;
     top: 9vw;
+}
+
+.main-header {
+    height: 100vh;
+}
+
+.container {
+    padding: 0 7vw;
+}
+
+.main-title {
+    position: absolute;
+    font-size: calc(var(--index) * 8);
+    width: min-content;
+    bottom: 12vh;
+    line-height: .9;
 }
