сверстали два блока в контейнере и перераспределили их позиц с помощью флексов

--- a/Color-hub-scroll/css/main.css
+++ b/Color-hub-scroll/css/main.css
@@ -37,6 +37,7 @@ body {
     position: absolute;
     left: 37vw;
     top: 9vw;
+    z-index: -1;
 }
 
 .main-header {
@@ -53,4 +54,24 @@ body {
     width: min-content;
     bottom: 12vh;
     line-height: .9;
+}
+
+.portfolio {
+}
+
+.gallery {
+    display: flex;
+}
+
+.gallery > * {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.gallery__left {
+}
+
+.gallery__right {
 }
