--- a/Color-hub-scroll/css/main.css
+++ b/Color-hub-scroll/css/main.css
@@ -8,6 +8,7 @@
     --index: calc(1vw+1vh);
     --color-header: #f4efec;
     --color-text: #cdc6c3;
+    --gallery-gap: calc(var(--index) * 10);
 }
 
 @font-face {
@@ -61,6 +62,7 @@ body {
 
 .gallery {
     display: flex;
+    padding: calc(var(--index) * 8) 0;
 }
 
 .gallery > * {
@@ -74,4 +76,9 @@ body {
 }
 
 .gallery__right {
+}
+
+.gallery__item {
+    max-width: calc(var(--index) * 21);
+    margin-bottom: var(--gallery-gap);
 }
