--- a/Color-hub-scroll/css/main.css
+++ b/Color-hub-scroll/css/main.css
@@ -73,12 +73,34 @@ body {
 }
 
 .gallery__left {
+    margin-top: calc(var(--gallery-gap) * 1.7);
 }
 
-.gallery__right {
+.gallery__right .gallery__item {
+    margin: 0;
+    margin-top: var(--gallery-gap);
 }
 
 .gallery__item {
     max-width: calc(var(--index) * 21);
     margin-bottom: var(--gallery-gap);
+    max-height: 180vh;
+    border-radius: 8px;
+}
+
+.text-block {
+    color: var(--color-text);
+    position: relative;
+}
+
+.text-block__h {
+    font-size: 2rem;
+    line-height: 2.4rem;
+    color: var(--color-header);
+    margin-bottom: 1.5rem;
+}
+
+.text-block__p {
+    line-height: 1.7;
+    margin-bottom: 10vh;
 }
